<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F4F3"
    android:backgroundTintMode="screen">

    <ImageButton
        android:id="@+id/LrefreshButton"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginBottom="4dp"
        android:background="#F1F4F3"
        android:contentDescription="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/refresh" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="56dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/server"
        android:textColor="#000000"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/LrefreshButton"
        app:layout_constraintStart_toEndOf="@+id/LrefreshButton"
        app:layout_constraintTop_toTopOf="@+id/LrefreshButton" />

    <TextView
        android:id="@+id/controllerTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/controller_config"
        android:textColor="#000000"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/LrefreshButton"
        app:layout_constraintEnd_toStartOf="@+id/LrefreshButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LrefreshButton"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/LrefreshButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/LserverStatus"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/not_connected"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/authTokenInput"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="260dp"
        android:autofillHints=""
        android:background="@drawable/rounded_square"
        android:backgroundTint="#E8E8E8"
        android:ems="10"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/auth_token"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/pasteButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="355dp"
        android:layout_height="93dp"
        android:layout_marginTop="-40dp"
        android:background="@drawable/rounded_square"
        android:backgroundTint="#E8E8E8"
        android:fontFamily="@font/proxima_nova"
        android:paddingTop="50dp"
        android:text="@string/home_heating_and_hot_water_control"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="34sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginBottom="152dp"
        android:backgroundTint="#E8E8E8"
        android:onClick="login"
        android:text="@string/log_in"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pasteButton"
        app:layout_constraintStart_toStartOf="@+id/authTokenInput"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/pasteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#E8E8E8"
        android:backgroundTintMode="add"
        android:onClick="login"
        android:text="@string/paste"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/authTokenInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/authTokenInput"
        app:layout_constraintTop_toTopOf="@+id/authTokenInput"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="634dp" />

</androidx.constraintlayout.widget.ConstraintLayout>