<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F4F3"
    tools:context=".controlActivity">

    <TextView
        android:id="@+id/nameView"
        android:layout_width="355dp"
        android:layout_height="93dp"
        android:layout_marginTop="-40dp"
        android:background="@drawable/rounded_square"
        android:backgroundTint="#E8E8E8"
        android:fontFamily="@font/proxima_nova"
        android:paddingTop="50dp"
        android:text="@string/home_heating_and_hot_water_control"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="34sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/refreshButton"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginBottom="4dp"
        android:background="#F1F4F3"
        android:contentDescription="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/controllerStatusLabel"
        app:srcCompat="@drawable/refresh" />

    <TextView
        android:id="@+id/controllerTV"
        android:layout_width="84dp"
        android:layout_height="18dp"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/controller"
        android:textColor="#000000"
        android:textSize="16sp"
        android:typeface="normal"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/controllerStatusLabel"
        app:layout_constraintEnd_toStartOf="@+id/controllerStatusLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/controllerStatusLabel" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="56dp"
        android:layout_height="18dp"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/server"
        android:textColor="#000000"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/refreshButton"
        app:layout_constraintEnd_toStartOf="@+id/serverStatus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/refreshButton"
        app:layout_constraintTop_toTopOf="@+id/refreshButton" />

    <TextView
        android:id="@+id/controllerStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/offline"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/refreshButton"
        app:layout_constraintEnd_toStartOf="@+id/refreshButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/controllerTV"
        app:layout_constraintTop_toTopOf="@+id/refreshButton" />

    <TextView
        android:id="@+id/serverStatus"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/not_connected"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/heatingCL"
        android:layout_width="385dp"
        android:layout_height="118dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_square"
        android:backgroundTint="#E8E8E8"
        app:layout_constraintBottom_toTopOf="@+id/waterCL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherCL">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/heating"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/heatingSwitch"
            android:layout_width="64dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:scaleX="1.6"
            android:scaleY="1.6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.505"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherCL"
        android:layout_width="385dp"
        android:layout_height="118dp"
        android:background="@drawable/rounded_square"
        android:backgroundTint="#E8E8E8"
        app:layout_constraintBottom_toTopOf="@+id/heatingCL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView"
        app:layout_constraintVertical_bias="0.098"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/outsideTemp"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:srcCompat="@drawable/_01d"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/outsideTemp"
            android:layout_width="68dp"
            android:layout_height="31dp"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/n_a"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/weatherIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/weatherIcon"
            app:layout_constraintTop_toTopOf="@+id/weatherIcon" />

        <TextView
            android:id="@+id/insideTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/n_a"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/outsideTemp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/outsideTemp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/outside"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.541" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/inside"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="116dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#616161"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/waterCL"
        android:layout_width="385dp"
        android:layout_height="118dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_square"
        android:backgroundTint="#E8E8E8"
        app:layout_constraintBottom_toTopOf="@+id/refreshButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heatingCL">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/water"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/waterSwitch"
            android:layout_width="64dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:scaleX="1.6"
            android:scaleY="1.6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.505" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/refreshButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>